--- a/Page/package.json
+++ b/Page/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -19,15 +19,14 @@
     "html-webpack-plugin": "^2.29.0",
     "json-loader": "^0.5.4",
     "raw-loader": "^0.5.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  },
+  "dependencies": {},
   "description": ""
 }
